# littlevGL_basic

./: CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c
lv_drivers/indev/: evdev.c  task.c
lv_examples/lv_apps/: demo.c  demo.h
lv_examples/lv_tests/: lv_test.h  lv_test_arc.h  lv_test_bar.h  lv_test_btn.h  lv_test_btnm.h  lv_test_cb.h  lv_test_chart.h  lv_test_cont.h  lv_test_ddlist.h  lv_test_gauge.h  lv_test_group.c  lv_test_group.h  lv_test_img.h  lv_test_imgbtn.h  lv_test_kb.h  lv_test_label.h  lv_test_led.h  lv_test_line.h  lv_test_list.h  lv_test_lmeter.h  lv_test_mbox.h  lv_test_obj.c  lv_test_obj.h  lv_test_page.h  lv_test_preload.h  lv_test_roller.h  lv_test_slider.h  lv_test_stress.h  lv_test_sw.h  lv_test_ta.h  lv_test_table.c  lv_test_table.h  lv_test_tabview.c  lv_test_tabview.h  lv_test_task.c  lv_test_task.h  lv_test_theme_1.c  lv_test_theme_1.h  lv_test_theme_2.c  lv_test_theme_2.h  (+3 more)
lv_examples/lv_tutorial/: lv_tutorial_hello_world.c  lv_tutorial_hello_world.h  lv_tutorial_objects.h  lv_tutorial_porting.c  lv_tutorial_porting.h  lv_tutorial_styles.h  lv_tutorial_themes.c  lv_tutorial_themes.h
lvgl/: lvgl.h
lvgl/docs/: CONTRIBUTING.md
lvgl/lv_core/: lv_indev.c  lv_obj.c  lv_refr.c  lv_style.c  lv_tmp.h  lv_vdb.c
lvgl/lv_draw/: lv_draw.c  lv_draw_arc.c  lv_draw_img.c  lv_draw_label.c  lv_draw_line.c  lv_draw_rbasic.c  lv_draw_rect.c  lv_draw_triangle.c  lv_draw_vbasic.c
lvgl/lv_fonts/: lv_font_dejavu_10.c  lv_font_dejavu_10_cyrillic.c  lv_font_dejavu_10_latin_sup.c  lv_font_dejavu_20.c  lv_font_dejavu_20_cyrillic.c  lv_font_dejavu_20_latin_sup.c  lv_font_dejavu_30.c  lv_font_dejavu_30_cyrillic.c  lv_font_dejavu_40.c  (+8 more)
(+30 files in other folders)
